@@ -1,3 +1,11 @@
+Wed May 12 13:51:37 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>
+
+        * DnC/Config_Handlers/Domain_Handler.cpp:
+        * DnC/Config_Handlers/Domain_Handler.h:
+
+          Added some general functions which other handlers could
+          use.
+
 Wed May 12 12:59:21 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>
 
         * DnC/Config_Handlers/Domain_Handler.cpp:
